--- a/style.css
+++ b/style.css
@@ -1,10 +1,36 @@
 body {
-    margin: 0;
-    padding: 0;
-  }
-  
-  .player {
-    margin-top: 50px;
-    text-align: center;
-  }
-  
+  background-color: #f9f9f9;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.player {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
+  margin: 50px auto;
+  max-width: 600px;
+  text-align: center;
+  padding: 20px;
+}
+
+h1 {
+  color: #333;
+  font-size: 2rem;
+  margin: 0;
+}
+
+h2 {
+  color: #666;
+  font-size: 1.5rem;
+  margin-top: 5px;
+}
+
+iframe {
+  border: none;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  height: 315px;
+}
